Mon May  4 18:27:17 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/ForwardUponObjectNotExist/client.cpp:

          Increased the orb run time to maximum 30 seconds to resolve the 
          test failure on some platforms that reply is not received 
          before orb is shutdown.
          
Fri May  1 19:12:14 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/ForwardUponObjectNotExist/client.cpp:

          Fixed compilation errors on wchar builds.

Fri May  1 08:09:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Notify/Bug_3646c_Regression/*:
          New test that where we use the TAO_Notify_Service to create
          multiple channels using service config. This closes enhancement
          issue 3646

        * bin/tao_other_tests.lst:
          Added new test

Fri May  1 07:05:29 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/ForwardUponObjectNotExist/ForwardUponObjectNotExist.mpc:
        * tests/ForwardUponObjectNotExist/README:
        * tests/ForwardUponObjectNotExist/client.cpp:
        * tests/ForwardUponObjectNotExist/run_test.pl:
        * tests/ForwardUponObjectNotExist/server.cpp:
        * tests/ForwardUponObjectNotExist/test.idl:
        * tests/ForwardUponObjectNotExist/test_i.h:
        * tests/ForwardUponObjectNotExist/test_i.inl:
        * tests/ForwardUponObjectNotExist/test_i.cpp:

          Added test for -ORBForwardInvocationOnObjectNotExist option
          and feature without using any service.

        * bin/tao_orb_tests.lst:

          Added ForwardUponObjectNotExist test.

Thu Apr 30 21:31:11 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/Portable_Interceptors/IORInterceptor/FOO_IORInterceptor.cpp:

          This test uses an arbitrary constant from the PortableServer module
          so we'll use one that's present in CORBA/e Compact configurations.

Thu Apr 30 18:35:47 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tao/Synch_Invocation.cpp:
