@@ -91,10 +91,10 @@ public:
                         ACE_OS::strlen(ex.whatDidTheRightThing.in()) * sizeof(CORBA::WChar)
                         ));
 
-          CORBA::WChar* wstring = CORBA::wstring_dup(L"Hello world");
+          CORBA::WChar const* wstring = L"Hello world";
 #else
-          CORBA::WChar empty[] = { 0 };
-          CORBA::WChar* wstring = CORBA::wstring_dup(empty);
+          CORBA::WChar const empty[] = { 0 };
+          CORBA::WChar const* wstring = empty;
 #endif
           if (ACE_OS::strcmp (wstring, ex.whatDidTheRightThing.in()) != 0)
             {
